--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ click = "^7.1.2"
 black = "^19.10b0"
 flake8 = "^3.8.3"
 
+[tool.poetry.scripts]
+flask-sketch = "flask_sketch:flask_sketch"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
