--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ psutil = "^5.7.2"
 [tool.poetry.scripts]
 flask-sketch = "flask_sketch.__main__:flask_sketch"
 
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
