--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,12 @@ flask-sqlalchemy = "^2.4.4"
 flask-praetorian = "^1.0.0"
 flask-admin = "^1.5.6"
 flask-basicauth = "^0.2.0"
-python-dotenv = "^0.14.0"
 flask-migrate = "^2.5.3"
 flask-limiter = "^1.3.1"
 flask-caching = "^1.9.0"
 pyctuator = "^0.12"
 psutil = "^5.7.2"
+dynaconf = "^3.0.0"
 
 [tool.poetry.scripts]
 flask-sketch = "flask_sketch.__main__:flask_sketch"
