--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [tool.poetry]
 name = "flask-sketch"
-version = "0.2.2"
+version = "0.2.3alpha3"
 description = "A CLI for autogenerate folder structure for Flask applications"
 authors = ["Eric Souza <ericsouza0801@gmail.com>"]
 license = "MIT License"
+
+readme = "README.md"
+
+repository = "https://github.com/ericsouza/flask-sketch"
+
+keywords = ["flask-sketch", "flask_sketch", "flask boilerplate"] 
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
