--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "flask-sketch"
-version = "0.2.5"
-description = "A CLI for autogenerate folder structure for Flask applications"
+version = "0.2.6"
+description = "A CLI for autogenerate folder structure and boilerplate for Flask applications"
 authors = ["Eric Souza <ericsouza0801@gmail.com>"]
 license = "MIT License"
 
